[test]: add test case for log.